<resources>
    <string name="app_name">todo_app</string>
    <string name="appBarText">To Do List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="language">language</string>
    <string name="mode">Mode</string>
    <string name="english" translatable="false">english</string>
    <string name="light" translatable="false">light</string>
    <string name="edit_task">Edit Task</string>
    <string name="details_text">this is details</string>
    <string name="select_time">select time</string>
    <string name="save_change">save change</string>
    <string name="add_task">Add Task</string>
    <string name="todo_list">ToDo List</string>
    <string name="tittle">tittle</string>
    <string name="enter_your_task">enter your task</string>
    <string name="description">description</string>
    <string name="selecte_date">selecte date</string>
    <string name="settings">Settings</string>
    <string name="night" translatable="false">night</string>
    <string name="done">Done</string>
    <string name="pleas_enter_tittle">pleas enter tittle</string>
    <string name="pleas_enter_description">pleas enter description</string>
    <string name="pleas_enter_date">pleas enter date</string>
    <string name="pleas_enter_time">pleas enter time</string>
    <string name="arabic">العربية</string>
    <string name="select_your_language">select your language</string>
    <string name="select_your_them">select Your Them</string>


    <array name="dropdownItemsLan">
        <item>english</item>
        <item>arabic</item>
    </array>
    <array name="dropdownItemsMod">
        <item>light</item>
        <item>night</item>
    </array>
</resources>