<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryVariant"
        android:theme="@style/Theme.Todo_app"
        tools:context=".ui.views.fragments.settings_fragment.SettingsFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/appBarGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Gl_topCv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/appBarGuideLine"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingStart="15dp"
                android:src="@drawable/icon_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView

                style="@style/primaryFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/edit_task"

                app:layout_constraintStart_toEndOf="@id/backButton"

                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="15dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintHeight_percent=".7"
            app:layout_constraintTop_toTopOf="@id/Gl_topCv">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/topTextFieldParent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.25" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/bottomTextFieldParent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.4" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/button_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent=".75" />

                <TextView
                    android:id="@+id/Tv_EditTask"
                    style="@style/primaryFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/edit_task"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:paddingHorizontal="20dp"
                    android:textColorHint="?attr/colorOnSecondary"
                    app:boxBackgroundColor="?attr/colorOnPrimary"
                    app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                    app:boxStrokeWidth="2dp"

                    app:layout_constraintTop_toTopOf="@id/topTextFieldParent"
                    tools:ignore="PrivateResource">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Et_tittle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/tittle" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:paddingHorizontal="20dp"
                    android:textColorHint="?attr/colorOnSecondary"
                    app:boxBackgroundColor="?attr/colorOnPrimary"
                    app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                    app:boxStrokeWidth="2dp"

                    app:layout_constraintTop_toBottomOf="@id/bottomTextFieldParent"
                    tools:ignore="PrivateResource">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Et_details"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/details_text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:enabled="true"
                    android:paddingHorizontal="20dp"
                    android:textColorHint="?attr/colorOnSecondary"
                    app:boxBackgroundColor="?attr/colorOnPrimary"
                    app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                    app:boxStrokeWidth="2dp"

                    app:layout_constraintTop_toBottomOf="@id/til_details"
                    tools:ignore="PrivateResource">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Et_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/select_time"
                        android:inputType="none"
                        android:textAlignment="center"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Bt_SaveChange"
                    style="@style/primaryFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/save_change"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_place"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    app:layout_constraintWidth_percent=".7" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>